Table regions {
  region_id NUMBER [pk, increment, note: 'Generated by default as identity, starts with 5']
  region_name VARCHAR2(50) [not null]
}

Table countries {
  country_id CHAR(2) [pk]
  country_name VARCHAR2(40) [not null]
  region_id NUMBER [ref: > regions.region_id, note: 'Foreign key, on delete cascade']
}

Table locations {
  location_id NUMBER [pk, increment, note: 'Generated by default as identity, starts with 24']
  address VARCHAR2(255) [not null]
  postal_code VARCHAR2(20)
  city VARCHAR2(50)
  state VARCHAR2(50)
  country_id CHAR(2) [ref: > countries.country_id, note: 'Foreign key, on delete cascade']
}

Table warehouses {
  warehouse_id NUMBER [pk, increment, note: 'Generated by default as identity, starts with 10']
  warehouse_name VARCHAR(255)
  location_id NUMBER [ref: > locations.location_id, note: 'Foreign key, on delete cascade']
}

Table employees {
  employee_id NUMBER [pk, increment, note: 'Generated by default as identity, starts with 108']
  first_name VARCHAR(255) [not null]
  last_name VARCHAR(255) [not null]
  email VARCHAR(255) [not null]
  phone VARCHAR(50) [not null]
  hire_date DATE [not null]
  manager_id NUMBER [ref: > employees.employee_id, note: 'Foreign key, on delete cascade']
  job_title VARCHAR(255) [not null]
}

Table product_categories {
  category_id NUMBER [pk, increment, note: 'Generated by default as identity, starts with 6']
  category_name VARCHAR2(255) [not null]
}

Table products {
  product_id NUMBER [pk, increment, note: 'Generated by default as identity, starts with 289']
  product_name VARCHAR2(255) [not null]
  description VARCHAR2(2000)
  standard_cost NUMBER
  list_price NUMBER
  category_id NUMBER [ref: > product_categories.category_id, note: 'Foreign key, on delete cascade']
}

Table customers {
  customer_id NUMBER [pk, increment, note: 'Generated by default as identity, starts with 320']
  name VARCHAR2(255) [not null]
  address VARCHAR2(255)
  website VARCHAR2(255)
  credit_limit NUMBER
}

Table contacts {
  contact_id NUMBER [pk, increment, note: 'Generated by default as identity, starts with 320']
  first_name VARCHAR2(255) [not null]
  last_name VARCHAR2(255) [not null]
  email VARCHAR2(255) [not null]
  phone VARCHAR2(20)
  customer_id NUMBER [ref: > customers.customer_id, note: 'Foreign key, on delete cascade']
}

Table orders {
  order_id NUMBER [pk, increment, note: 'Generated by default as identity, starts with 106']
  customer_id NUMBER [not null, ref: > customers.customer_id, note: 'Foreign key, on delete cascade']
  status VARCHAR(20) [not null]
  salesman_id NUMBER [ref: > employees.employee_id, note: 'Foreign key, on delete set null']
  order_date DATE [not null]
}

Table order_items {
  order_id NUMBER [ref: > orders.order_id, note: 'Foreign key, on delete cascade']
  item_id NUMBER
  product_id NUMBER [not null, ref: > products.product_id, note: 'Foreign key, on delete cascade']
  quantity NUMBER [not null]
  unit_price NUMBER [not null]
  indexes {
    (order_id, item_id) [pk]
  }
}

Table inventories {
  product_id NUMBER [ref: > products.product_id, note: 'Foreign key, on delete cascade']
  warehouse_id NUMBER [ref: > warehouses.warehouse_id, note: 'Foreign key, on delete cascade']
  quantity NUMBER [not null]
  indexes {
    (product_id, warehouse_id) [pk]
  }
}